# t-reader

./: .gitignore  README.md  account.html  flashcard.html  index.html  library.html  stories.js  wrangler.jsonc
.claude/: CLAUDE.md
backend/: .dockerignore  .env.example  Dockerfile  README.md  fly.toml  pyproject.toml
backend/app/: auth.py  config.py  db.py  main.py  models.py  schemas.py  sm2.py
backend/app/routers/: account.py  cards.py  import_data.py  progress.py  streaks.py
backend/supabase/: schema.sql
js/: account.js  auth-ui.js  config.js  notify.js  storage.js  sync.js
